--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name" : "include",
+  "name": "include",
   "description": "Include Plugin",
-  "version": "3.4.0",
-  "tags" : [
+  "version": "3.4.19",
+  "stable": "3.3",
+  "wp_requires": "2.5",
+  "wp_tested": "4.4.1",
+  "tags": [
     "WordPress",
     "Plugin",
     "Php",
     "Open Source"
   ],
-  "author": {
-    "name": "Mike Flynn",
-    "email": "mflynn@flynndev.us"
+  "author": "Mike Flynn <mflynn@flynndev.us>",
+  "license": "GPL3",
+  "main": "Gruntfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "ISC"
+  "dependencies": {
+    "versiony": "^2.0.1"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0"
+  }
 }
