--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "include",
   "title": "Include",
   "description": "Include one Page or Post into another.",
-  "version": "3.4.22",
-  "stable": "3.3",
+  "version": "3.4.23",
+  "stable": "3.4.23",
   "wp_requires": "2.5",
   "wp_tested": "4.4.1",
   "tags": [
@@ -43,6 +43,9 @@
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-convert-svg-to-png": "^1.1.0",
+    "grunt-image-resize": "^1.0.0",
+    "grunt-svg2png": "^0.2.7"
   }
 }
