Testing Release Idea

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "include",
   "title": "Include",
   "description": "Include one Page or Post into another.",
-  "version": "4.0.18",
+  "version": "4.0.19",
   "stable": "4.0.15",
   "wp_requires": "2.5",
   "wp_tested": "4.8",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-convert-svg-to-png": "^1.1.0",
